name:                generic-lift
version:             1.0.0
synopsis:            Lift any pure function over any Applicative stack.
description:         See haddocks for examples
homepage:            https://github.com/aaronallen8455/generic-lift#readme
license:             BSD3
license-file:        LICENSE
author:              Aaron Allen
maintainer:          aaronallen8455@gmail.com
copyright:           2019 Aaron Allen
category:            Lift, Applicative, Traversal, Foldable, Functor
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Lift
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aaronallen8455/generic-lift
